--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,35 @@ cmake_minimum_required(VERSION 3.9)
 
 project(pi400kb)
 
+option(NO_OUTPUT "Disable USB HID output" OFF)
+
+
+if(NOT KEYBOARD_VID)
+    set(KEYBOARD_VID "0x04d9" CACHE STRING "Vendor ID for keyboard")
+endif()
+
+if(NOT KEYBOARD_PID)
+    set(KEYBOARD_PID "0x0007" CACHE STRING "Product ID for keyboard")
+endif()
+
+if(NOT KEYBOARD_DEV)
+    set(KEYBOARD_DEV "/dev/input/by-id/usb-_Raspberry_Pi_Internal_Keyboard-event-kbd" CACHE STRING "Device path for keyboard")
+endif()
+
+
+if(NOT MOUSE_VID)
+    set(MOUSE_VID "0x093a" CACHE STRING "Vendor ID for mouse")
+endif()
+
+if(NOT MOUSE_PID)
+    set(MOUSE_PID "0x2510" CACHE STRING "Product ID for mouse")
+endif()
+
+if(NOT MOUSE_DEV)
+    set(MOUSE_DEV "/dev/input/by-id/usb-PixArt_USB_Optical_Mouse-event-mouse" CACHE STRING "Device path for mouse")
+endif()
+
+
 add_library(libusbgx INTERFACE)
 target_sources(libusbgx INTERFACE
     ${CMAKE_CURRENT_LIST_DIR}/libusbgx/src/usbg.c
@@ -38,6 +67,20 @@ add_executable(
     gadget-hid.c
 )
 
-target_compile_definitions(pi400kb PRIVATE HAS_GADGET_SCHEMES)
+target_compile_definitions(pi400kb PRIVATE
+    HAS_GADGET_SCHEMES
+
+    MOUSE_VID=${MOUSE_VID}
+    MOUSE_PID=${MOUSE_PID}
+    MOUSE_DEV="${MOUSE_DEV}"
+
+    KEYBOARD_VID=${KEYBOARD_VID}
+    KEYBOARD_PID=${KEYBOARD_PID}
+    KEYBOARD_DEV="${KEYBOARD_DEV}"
+)
+
+if(NO_OUTPUT)
+    target_compile_definitions(pi400kb PRIVATE NO_OUTPUT)
+endif()
 
 target_link_libraries(pi400kb libusbgx)
