--- a/modprobe.service
+++ b/modprobe.service
@@ -2,7 +2,7 @@
 Description=Modprobe on start up
 
 [Service]
-ExecStart=/usr/sbin/modprobe libconfig
+ExecStart=/usr/sbin/modprobe libcomposite
 User=root   
 Group=root   
 Type=simple
